fixed wrong font for input element

--- a/src/css/2-generic/font.scss
+++ b/src/css/2-generic/font.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Inter", sans-serif;
+  font-family: sans-serif;
   font-size: var(--font-size-3);
 }
 
@@ -28,5 +28,9 @@ h3 {
 }
 
 h4 {
+  font-size: var(--font-size-3);
+}
+
+body :where(input, button, textarea) {
   font-size: var(--font-size-3);
 }
