--- a/src/css/2-generic/reset.scss
+++ b/src/css/2-generic/reset.scss
@@ -2,23 +2,23 @@
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 * {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-	line-height: 1.7;
-	-webkit-font-smoothing: antialiased;
-	height: 100%;
-	overflow: auto;
+  line-height: 1.7;
+  -webkit-font-smoothing: antialiased;
+  height: 100%;
+  overflow: auto;
 }
 
 main {
-	min-height: 100vh;
+  min-height: 100vh;
 }
 
 img,
@@ -27,18 +27,17 @@ video,
 iframe,
 figure,
 canvas {
-	width: 100%;
-	height: auto;
-	object-fit: cover;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 input,
 button,
 textarea,
 select {
-	font: inherit;
-	background-color: transparent;
-	border: none;
+  background-color: transparent;
+  border: none;
 }
 
 p,
@@ -48,16 +47,16 @@ h3,
 h4,
 h5,
 h6 {
-	overflow-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 a {
-	color: inherit;
-	width: max-content;
+  color: inherit;
+  width: max-content;
 }
 
 footer {
-	position: sticky;
-	top: 100vh;
+  position: sticky;
+  top: 100vh;
 }
 /* purgecss end ignore */
